test/trivial/bradc/defaultinit1a.chpl
proc main() {

writeln("a is: ", a);
writeln("b is: ", b);
writeln("c is: ", c);
writeln("d is: ", d);
writeln("e is: ", e);
writeln();

var a: bool = true;
var b: int = 1;
var c: real = 1.2;
var d: complex = 1.2 + 3.4i;
var e: string = "nonempty";

writeln("a is: ", a);
writeln("b is: ", b);
writeln("c is: ", c);
writeln("d is: ", d);
writeln("e is: ", e);
}
